compliance-reviewer/main/default/objects/Compliance_Review__c/Compliance_Review__c.object-meta.xml
<CustomObject>
    <description>Stores the result of each Compliance Agent contract analysis run: the source and target records involved, the exact contract file version analyzed, which Compliance Agent Setting was used, the evidence payload sent to the AI model, and the structured findings returned (discrepancies, severity, and summary). One record is created per &quot;Analyze Contract&quot; execution and serves as the audit trail for compliance reviews.</description>
    <label>Compliance Review</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Compliance Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>