compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Compliance_Agent_Setting__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Agent_Setting__c</fullName>
    <description>DeveloperName of the Compliance_Agent_Setting__mdt record used for this analysis (configuration traceability). Query Compliance_Agent_Setting__mdt WHERE DeveloperName = this value to inspect the full config used at the time.</description>
    <inlineHelpText>The configuration used to determine what data to compare against the contract.</inlineHelpText>
    <label>Compliance Agent Setting</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>