compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>ContentDocumentId of the contract file analyzed. Points to the File itself (all versions); combine with Content_Version_Id__c to identify the exact version reviewed.</description>
    <inlineHelpText>Reference to the contract file that was reviewed.</inlineHelpText>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>