compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>ContentVersionId of the exact file version sent to the AI model. Critical for audit: if the file is re-uploaded later, this still points to the version actually reviewed, not the current one.</description>
    <inlineHelpText>The specific version of the file that was reviewed (not necessarily the latest one).</inlineHelpText>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>