compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Discrepancy_Count__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Count__c</fullName>
    <description>Number of discrepancies found by the AI model in this run, taken from ComplianceReviewResult.discrepancyCount. Used for quick filtering/reporting without parsing Raw_Response__c.</description>
    <inlineHelpText>How many issues were found in this review.</inlineHelpText>
    <label>Discrepancy Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>