compliance-reviewer/main/default/objects/Compliance_Review__c/fields/File_Title__c.field-meta.xml
<CustomField>
    <fullName>File_Title__c</fullName>
    <description>Title of the ContentVersion analyzed, denormalized here for display without an extra query/lookup.</description>
    <inlineHelpText>Name of the contract file that was reviewed.</inlineHelpText>
    <label>File Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>