compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Model_Used__c.field-meta.xml
<CustomField>
    <fullName>Model_Used__c</fullName>
    <description>Name of the LLM model that generated this analysis (e.g. &quot;Anthropic Claude Sonnet 5 on Amazon&quot;), as returned by the Prompt Template invocation.</description>
    <inlineHelpText>Which AI model performed this analysis.</inlineHelpText>
    <label>Model Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>