compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <description>Full unmodified JSON response returned by the AI model for this run, before mapping into the structured fields above. Kept for troubleshooting/audit.</description>
    <inlineHelpText>Technical record of the AI&apos;s full response — for admin/audit use.</inlineHelpText>
    <label>Raw Response</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>