compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>Exact evidenceJson payload sent to the Prompt Template at the time of analysis. Preserved for audit, since underlying Salesforce data may change after the review runs.</description>
    <inlineHelpText>Technical record of the data sent for analysis — for admin/audit use.</inlineHelpText>
    <label>Request Payload</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>