compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <description>API name of the object where the &quot;Analyze Contract&quot; button was clicked (e.g. Account, Case, Opportunity), taken from Compliance_Agent_Setting__mdt.Source_Object__c.</description>
    <inlineHelpText>The type of record from which this compliance review was launched (e.g. Account, Case).</inlineHelpText>
    <label>Source Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>