compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Id of the record where the &quot;Analyze Contract&quot; button was clicked (the Source_Object__c side of the Compliance Agent Setting used for this run). May differ from the analyzed record when Source and Target are not the same object.</description>
    <inlineHelpText>The record from which this compliance review was launched.</inlineHelpText>
    <label>Source Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>