compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Outcome of the analysis: whether discrepancies were found, none were found, or the AI invocation failed. Maps to ComplianceReviewResult.status.</description>
    <inlineHelpText>The overall result of this compliance review.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Issues Found</fullName>
                <label>Aligned</label>
            </value>
            <value>
                <fullName>Issues Found</fullName>
                <label>Needs Attention</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Analysis Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>