compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Summary_Html__c.field-meta.xml
<CustomField>
    <fullName>Summary_Html__c</fullName>
    <description>Executive summary in HTML generated by the AI model (ComplianceReviewResult.summaryHtml), meant to be read directly by a non-technical business user.</description>
    <inlineHelpText>Plain-language summary of what this review found.</inlineHelpText>
    <label>Summary</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>