compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>API name of the record actually analyzed (Compliance_Agent_Setting__mdt.Target_Object__c, after resolving the Source_Relationship_Field__c / Target_Relationship_Field__c chain).</description>
    <inlineHelpText>The type of record whose data was compared against the contract (e.g. Account, Opportunity).</inlineHelpText>
    <label>Target Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>