compliance-reviewer/main/default/objects/Compliance_Review__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>Id of the record actually analyzed by the AI model (the resolved Target_Object__c side of the Compliance Agent Setting). Equals Source_Record_Id__c when Source and Target reference the same object (e.g. Account self-reference).</description>
    <inlineHelpText>The record whose data was compared against the contract.</inlineHelpText>
    <label>Target Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>