compliance-reviewer/main/default/objects/Compliance_Review__c/fields/View_Contract__c.field-meta.xml
<CustomField>
    <fullName>View_Contract__c</fullName>
    <description>Direct link to the exact ContentVersion analyzed in this review, opened in a new tab.</description>
    <formula>HYPERLINK(
  &quot;/lightning/r/ContentVersion/&quot; &amp; Content_Version_Id__c &amp; &quot;/view&quot;,
  &quot;View analyzed contract&quot;,
  &quot;_blank&quot;
)</formula>
    <inlineHelpText>Click to open the contract file that was reviewed.</inlineHelpText>
    <label>View Contract</label>
    <type>Text</type>
</CustomField>