compliance-reviewer/main/default/objects/Compliance_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Discrepancy_Count__c</columns>
    <columns>File_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>